fixed spacing issues
Fixed spacing issues ocured in acd237f in events.

(Team page pending)

--- a/events/style.css
+++ b/events/style.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+body{
+  margin: 0;
+}
+
 .container {
   width: 100vw;
 /*  padding: 1% 3vw;*/
@@ -51,50 +55,52 @@ h1 {
 
 /*@media (min-width: 700px) {*/
 @media (max-width: 980px) {
-  .card {
-    width: 44vw;
+  @media (min-width: 700px) {
+    .card {
+      width: 44vw;
+    }
+
+    .card:nth-child(odd){
+    margin-left: 3vw;   /*(1.5vw (already) + 2vw (required) )*/
+    }
+
+    .card:nth-child(even){
+      margin-right: 3vw;
+    }
+  /*    
+      margin-right: 20px;
+      margin-bottom: 20px;
+    }
+    .card:nth-child(even) {
+      margin-right: 0;
+    }
+  */
   }
 
-  .card:nth-child(odd){
-  margin-left: 3vw;   /*(1.5vw (already) + 2vw (required) )*/
+
+  @media (max-width: 700px) {
+    .cards{
+      /* margin: 1% 1vw; */
+      justify-content:  center;
+      -webkit-justify-content: center;
+    }
+
+    .card {
+      margin: 1% 5vw;
+      width: 90vw;
+    }
   }
 
-  .card:nth-child(even){
-    margin-right: 3vw;
-  }
-/*    
-    margin-right: 20px;
-    margin-bottom: 20px;
-  }
-  .card:nth-child(even) {
-    margin-right: 0;
-  }
-*/
+  /*
+  @media (min-width: 980px) {
+    .card:nth-child(even) {
+      margin-right: 20px;
+    }
+    .card:nth-child(3n) {
+      margin-right: 0;
+    }
+  }*/
 }
-
-
-@media (max-width: 700px) {
-  .cards{
-    margin: 1% 1vw;
-    justify-content:  center;
-    -webkit-justify-content: center;
-  }
-
-  .card {
-    margin: 3vw;
-    width: 92vw;
-  }
-}
-
-/*
-@media (min-width: 980px) {
-  .card:nth-child(even) {
-    margin-right: 20px;
-  }
-  .card:nth-child(3n) {
-    margin-right: 0;
-  }
-}*/
 
 .card span {
   display: block;
